--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Prabhnith</h1>
-      <h2 class="project-tagline">blog</h2>
+      <h2 class="project-tagline">We create stuff and others follow it .</h2>
     </section>
 
     <section class="main-content">
