--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
               </footer>
 
             </section>
+            <div class="sd-content">
+            <ul>
+              <li class="share-twitter">
+                <a rel="nofollow" class="share-twitter sd-button share-icon" href="https://prabhnith.github.io/?share=twitter&amp;nb=1" title="Click to share on Twitter" id="sharing-twitter-1">
+                  <span>Twitter</span></a>
+              </li>
+              <li class="share-facebook"><a rel="nofollow" class="share-facebook sd-button share-icon" href="https://prabhnith.github.io/?share=facebook&amp;nb=1" title="Share on Facebook" id="sharing-facebook-1"><span>Facebook</span></a></li>
+              <li class="share-google-plus-1"><a rel="nofollow" class="share-google-plus-1 sd-button share-icon" href="https://prabhnith.github.io/?share=google-plus-1&amp;nb=1" title="Click to share on Google+" id="sharing-google-1"><span>Google</span></a></li><li class="share-end"></li>
+              </ul>
+           </div>
 
 
           </body>
