Meta content description added
meta keywords and description added.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Prabhnith at GitHub</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="This is the bolf of Prabhjot Singh. This blog contains all the stuff ranging from technology, Computer Science, Android, Linux to many other technical things.">
+  <meta name="keywords" content="Prabhnith, Prabhjot Singh,windows,microsoft,blog, Technology, Linux, Android, Technical anf fun stuff">
   <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
@@ -73,11 +75,5 @@
               <li class="share-google-plus-1"><a rel="nofollow" class="share-google-plus-1 sd-button share-icon" href="https://prabhnith.github.io/?share=google-plus-1&amp;nb=1" title="Click to share on Google+" id="sharing-google-1"><span>Google</span></a></li><li class="share-end"></li>
               </ul>
           </div>
-
-          <div class = "colin-devi">
-            <a href="colindevi.html"> Colin-Devi </a>
-          </div>
-
-
           </body>
           </html>
