colin-devi linked in index.html

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
               </ul>
           </div>
 
+          <div class = "colin-devi">
+            <a href="colindevi.html"> Colin-Devi </a>
+          </div>
+
 
           </body>
           </html>
