--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+---
+layout: default
+title: PrabhNith , Working with Blog
+---
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
